tests/integration/snapshots/integration__conformance__n_object_missing_key.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
{:"b"}
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `:`
 --> stdin:1:2
  |
1 | {:"b"}
  | -^
  | |
  | expected due to `{`
